# rv32-vm

./: CMakeLists.txt  README.md  build.sh  rv32.h  rv32_alu.c  rv32_alu.h  rv32_decode.c  rv32_decode.h  rv32_instr.c  rv32_instr.h  rv32_mem.c  rv32_mem.h  rv32_regs.c  rv32_regs.h  rv32_vm.c
cmake/: warnings.cmake
data/: instructions.txt
